added tasks for cronie and bridge network that will be used for the LXC virtualization of the docker containers. Bridge interface is br0.  Added the include tasks for br0.yml and cronie.yml

--- a/ansible/essentials/tasks/main.yml
+++ b/ansible/essentials/tasks/main.yml
@@ -19,3 +19,5 @@
   notify: restart systemd-networkd  # https://docs.ansible.com/ansible/latest/user_guide/playbooks_handlers.html
 
 - include_tasks: packages.yml
+- include_tasks: cronie.yml
+- include_tasks: br0.yml
