large commit for all the ansible docker role: files handlers and tasks. This sets up linode VPS with running docker daemon for docker containers. Note network is 172 network for the containers.  Finally modify security/tasks/iptables.yml to restart docker after restarting iptables so the all the docker nat rules and iptables rules for the running containers get re-instated. Otherwise each time run ansible security iptables the docker rules would be wiped out. Add the handler to security/handlers/main.yml as well

--- a/ansible/security/tasks/iptables.yml
+++ b/ansible/security/tasks/iptables.yml
@@ -13,9 +13,18 @@
     group: root
     mode: '644'
     backup: yes
-  notify: restart iptables
+  #notify: restart iptables
+  notify: 
+    - restart iptables
+    - restart docker
+# NOTES on notify list of restarting iptables and then docker:
+# Problem is wherever we run ansible-playbook the security that configures the iptables has no knowledge of the docker rules (see /etc/iptables/iptables.rules)
+# So every time the ansible-playbook security role is run the docker container rules will be wiped out and docker containers will be unreachable.
+# to solve this add another handler to restart docker daemon and call it from the security iptables task
+# To solve this issue have to restart docker daemon each time the security iptables ansible role is run. This will reload all the DOCKER rules into the iptables -vnL and iptables -t nat -vnL tables
+# NOTE restart docker service AFTER restarting iptables not before
 
-# NOTES on ansible.builtin.copy
+# NOTES on ansible.builtin.copy:
 # For src ansible searches for the file in files directory by default. There is a complete algorithm that ansible uses to find the files file.
 # So src: files/filename will work as well as src: filename
 # Here's my test: in "src" I specified just the file name: "delme".
