--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ ansible-debug.txt
 ansible-debug2.txt
 ansible-debug3.txt
 ansible_log_path.txt
+.vault_password
+/home/ubuntu/course11_devops_startup/ansible/mariadb/defaults/main.yml
