--- a/ansible/lxc/tasks/main.yml
+++ b/ansible/lxc/tasks/main.yml
@@ -23,3 +23,38 @@
     group: root
     mode: '700'
     state: directory
+
+- name: backup script for lxc mail.linode.cloudnetworktesting.com
+  # copy over the backups script from files directory to the /root directory of the VPS
+  ansible.builtin.copy:
+    src: files/lxc-backup-mail-linode-cloudnetworktesting-com.sh
+    dest: /root/scripts
+    owner: root
+    group: root
+    mode: '700'
+
+- name: .env-lxc-backups
+  # copy over the .env-lxc-backups file into the /root of the VPS
+  ansible.builtin.copy:
+    src: files/.env-lxc-backups
+    dest: /root/scripts
+    owner: root
+    group: root
+    mode: '600'
+
+- name: add backup script for lxc mail.linode.cloudnetworktesting.com to cron
+  # This will add the backup of the iRedMail LXC container to the cron job listing.
+  # Currently the mariadb dump of all databases is in the cronjob list
+  # This mail cronjob will backup the LXC container file system and config to the mariadb backups db
+  ansible.builtin.cron:
+    name: lxc mail.linode.cloudnetworktesting.com backup
+    minute: "01"
+    hour: "1"
+    user: root
+    job: "/root/scripts/lxc-backup-mail-linode-cloudnetworktesting-com.sh > /dev/null 2>&1"
+
+- name: ensure lxc mail.linode.cloudnetworktesting.com is enabled at boot
+  # mail.linode.cloudnetworktesting.com is the name of the LXC container below
+  ansible.builtin.systemd:
+    name: lxc@mail.linode.cloudnetworktesting.com
+    enabled: yes
