local VSCode gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ ansible_log_path.txt
 /ansible/mariadb/defaults/
 .env-lxc-backups
 notes_local_VSCode.txt
+notes_local_VSCode1.txt
+notes_local_VSCode*.txt
