--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ directory_venv
 tmp_ansible_venv
 directory_pyenv_virtualenv
 notes.txt
+notes1.txt
+notes*.txt
 get-certs.sh
 credentials.ini
 .DS_Store
