--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,15 +1,15 @@
 - hosts: main
   roles:
-    - hostname
-    - essentials
+    # - hostname
+    #- essentials
     - security
-    - sysctl
-    - certbot
-    - wireguard
-    - docker
-    - mariadb
-    - lxc
-    - traefik
-    - pi-hole
-    - nextcloud
+    #- sysctl
+    #- certbot
+    #- wireguard
+    #- docker
+    #- mariadb
+    #- lxc
+    #- traefik
+    #- pi-hole
+    #- nextcloud
     - checkmk
