doing testing for the EC2 access to the checkmk docker instance so that i can download files to the EC2 ansible controller from the checmk docker instance with wget. The .env whitelist for traefik middleware for the checkmk needs to have source public ip of EC2 controller

--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -2,14 +2,14 @@
   roles:
     # - hostname
     #- essentials
-    - security
+    #- security
     #- sysctl
     #- certbot
     #- wireguard
     #- docker
     #- mariadb
     #- lxc
-    #- traefik
+    - traefik
     #- pi-hole
     #- nextcloud
     - checkmk
