added gitlab role ansible playbook code with main.yml for tasks and docker-compose.yml and backup.sh for cronjobs. This will create the gitlab docker container

--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,6 +1,6 @@
 - hosts: main
   roles:
-    # - hostname
+    #- hostname
     #- essentials
     #- security
     #- sysctl
@@ -12,5 +12,6 @@
     #- traefik
     #- pi-hole
     #- nextcloud
-    - checkmk
-    - borg
+    #- checkmk
+    #- borg
+    - gitlab
