added gitlab runner to the ansible playbook. Gitlab runner deployed successfully. Note to register must whitelist the VPS public ip address on the traefik gitlab configuration because the registration of gitlab runner with gitlab docker instance has packets from VPS public

--- a/ansible/gitlab/tasks/main.yml
+++ b/ansible/gitlab/tasks/main.yml
@@ -47,3 +47,6 @@
     hour: "2"
     user: root
     job: "/root/services/gitlab/backup.sh > /dev/null 2>&1"
+
+# This is for the gitlab runner. The actual tasks for the runner setup are in runner.yml
+- include_tasks: runner.yml      
