commit for updating several of the backup.sh sripts for checkmk and mail and zulip scripts and nextcloud backup.sh and pi-hole backup.sh. Reduce retention to 2 files rather than 8 to prevent /mnt/storage exhaustion.   Added INPUT security rules to iptables.rules in security role for the pyhon app. It needs to communicate with zulip public VPS ip address.  Finally add allowed ips for the docker subnets to the zulip.yml in the traefik role for the same reason as iptables....for the python app

--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -2,7 +2,7 @@
   roles:
     #- hostname
     #- essentials
-    #- security
+    - security
     #- sysctl
     #- certbot
     #- wireguard
@@ -14,4 +14,4 @@
     #- nextcloud
     #- checkmk
     #- borg
-    - gitlab
+    #- gitlab
