--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -10,8 +10,8 @@
     #- mariadb
     #- lxc
     #- traefik
-    - pi-hole
+    #- pi-hole
     #- nextcloud
-    #- checkmk
+    - checkmk
     #- borg
     #- gitlab
