--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -11,7 +11,7 @@
     #- lxc
     #- traefik
     #- pi-hole
-    #- nextcloud
+    - nextcloud
     #- checkmk
     #- borg
-    - gitlab
+    #- gitlab
