mtime adjustments for backup overflow in /mnt/strorage volume. Change mtime from mtime +1 to mtime +0

--- a/ansible/borg/files/config.yaml
+++ b/ansible/borg/files/config.yaml
@@ -295,7 +295,9 @@ retention:
     # keep_hourly: 24
 
     # Number of daily archives to keep.
-    keep_daily: 3
+    # Need to reduce this as borg is filling up the /mnt/storage
+    #keep_daily: 3
+    keep_daily: 1
 
     # Number of weekly archives to keep.
     keep_weekly: 1
