add the ip address for jenkinsserver to the gitlab docker instance whitelist to permit jenkins to gitlab communication via a gitlab token used on jenkins gitlab plugin along with the url and credentials of gitlab

--- a/ansible/setup_no_local.yml
+++ b/ansible/setup_no_local.yml
@@ -13,8 +13,8 @@
     #- pi-hole
     #- nextcloud
     #- checkmk
-    - borg
-    #- gitlab
+    #- borg
+    - gitlab
 #- hosts: localhost
   #roles:
    #- eksctl 
